# all

./: .gitignore  WORKSPACE.bazel  git_tip
Doc/: Bazel_setup  build_command  git
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
